# compstat

./: .dockerignore  .env.example  CLAUDE.md  Dockerfile  README.md  package-lock.json  package.json
app/: globals.css
docs/: Presentation - CoPatrulha.pptx
public/data/: radar-rj-crossed.csv
relintgenerator/: CLAUDE.md  gerar_relint.py  pyproject.toml
relintgenerator/dados/gold/: resumo_roubos_por_area_fm.csv
relintgenerator/relints_gerados/: RI_011_2026_METRÔ_BOTAFOGO_-_RUA_SÃO_CLEMENTE_-_VOLUNTÁRIOS_DA_PÁTRIA.docx  RI_012_2026_JARDIM_DE_ALAH.docx  RI_013_2026_CAMPO_GRANDE_-_ESTAÇÃO_-_CALÇADÃO.docx  RI_016_2026_ESTAÇÕES_SÃO_FRANCISCO_XAVIER_-_AFONSO_PENA.docx  RI_017_2026_PRESIDENTE_VARGAS_-_CAMPO_DE_SANTANA_-_CENTRAL_-_CINELÂNDIA.docx
reportgenerator/: README.md  cruzamento_espacial.py  gerar_relint.py
reportgenerator/dados/gold/: resumo_roubos_por_dominio.csv
reportgenerator/relints_gerados/: RI_010_2026_RODOVIÁRIA_-_TERMINAL_GENTILEZA_-_ESTAÇÃO_LEOPOLDINA.docx  RI_014_2026_RIO_SUL.docx  RI_015_2026_PRAIA_DE_BOTAFOGO_-_MARQUÊS_DE_ABRANTES.docx
scripts/: build-radar-rj-crossed.mjs
src/app/: globals.css  layout.tsx
src/app/contato/: contact-form.tsx  page.tsx
src/app/dashboard-estrategico/: page.tsx
src/app/mapa/: page.tsx  (+1 more)
src/config/: contact.ts  mapa.ts  maplibre-style-fallback.ts  navigation.ts  rio-bbox.ts  rj-estado-map.ts
src/hooks/: use-html-dark-class.ts  use-is-client.ts  use-map-style-with-network-fallback.ts  use-territorios-geojson.ts
src/lib/: parse-territorio-csv.ts
src/types/: radar-chat-ui.ts  territorio.ts  wellknown.d.ts
(+38 files in other folders)
