[project]
name = "copatrulha"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.104.1",
    "geopandas>=1.1.3",
    "polars>=1.41.0",
    "pyarrow>=24.0.0",
    "pyogrio>=0.12.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "shapely>=2.1.2",
]
